...
    const val MULTIPLE_TAG = "multipleGalleryButtonTag"
  }

  object CustomLocationDialogTags {
    const val DIALOG_TITLE = "customLocationDialogTitle"
    const val LOCATION_TEXT_FIELD = "customLocationDialogTextField"
    const val CONFIRM_BUTTON = "customLocationDialogConfirmButton"
    const val CLOSE_BUTTON = "customLocationDialogCloseButton"
    const val DROPDOWN_MENU = "customLocationDialogDropdownMenu"

    fun locationSuggestion(index: Int): String = "customLocationDialogSuggestion$index"

    const val MORE_OPTION = "customLocationDialogMoreOption"
...
    const val PRICE_FIELD = "priceField"

    const val DESCRIPTION_FIELD = "descField"

    const val GRADE_FIELD = "gradeField"

    const val DELETE_BUTTON = "deleteButton"

    const val SAVE_BUTTON = "saveButton"

    const val REVIEW_TITLE = "reviewTitleField"
    const val PHOTOS = "editReviewPhotos"
  }

  object CustomDatePickerDialogTags {
    const val OK_BUTTON = "customDatePickerDialogOkButton"
    const val CANCEL_BUTTON = "customDatePickerDialogCancelButton"
  }

  object AddListingScreenTags {
    const val ROOT = "addListingRoot"
    const val TITLE_FIELD = "titleField"
    const val SIZE_FIELD = "sizeField"
    const val PRICE_FIELD = "priceField"
    const val START_DATE_FIELD = "startDateField"
    const val DESC_FIELD = "descField"
    const val CONFIRM_BUTTON = "confirmButton"
    const val CUSTOM_LOCATION_BUTTON = "customLocationButton"
    const val ERROR_MESSAGE = "addListingErrorMessage"
    const val RESIDENCY_DROPDOWN = "addListingResidencyDropdown"
  }

  object EditListingScreenTags {
    const val TITLE_FIELD = "titleField"
    const val SIZE_FIELD = "sizeField"
...
    const val SAVE_BUTTON = "adminPageSaveButton"
    const val PHOTOS = "adminPagePhotos"
    const val RESIDENCY_DROPDOWN = "adminPageResidencyDropdown"
  }

  object AddPhotoButtonTags {
    const val BUTTON = "addPhotoButton"
    const val DIALOG = "addPhotoDialog"
    const val CAMERA_BUTTON_TEXT = "addPhotoCameraButtonText"
    const val GALLERY_BUTTON_TEXT = "addPhotoGalleryButtonText"
  }

  object SettingsTags {
...

  object ChatScreenTestTags {
    const val CHAT_BLOCKED_BANNER = "BLOCKED_BANNER"
  }

  object SanitizedResidencyDropdownTags {
    const val RESIDENCY_DROPDOWN_BOX = "sanitizedResidencyDropdownBox"
    const val PRIVATE_ACCOMMODATION = "privateAccommodation"

    fun getResidencyTag(residencyName: String) = "sanitizedResidencyDropdown_$residencyName"
  }

  object ProfileTags {
...
