...
    imeAction: ImeAction = if (singleLine) ImeAction.Next else ImeAction.Default,
    keyboardOptions: KeyboardOptions = defaultKeyboardOptionsFor(fieldType, imeAction),
    keyboardActions: KeyboardActions = KeyboardActions.Default,
    visualTransformation: VisualTransformation = VisualTransformation.None,
    enabled: Boolean = true,
    readOnly: Boolean = false,
    testTag: String = defaultTestTag(fieldType),
    leadingIcon: (@Composable (() -> Unit))? = null,
    trailingIcon: (@Composable (() -> Unit))? = null,
) {

  val textFieldColors =
      OutlinedTextFieldDefaults.colors(
...
